[package]
name = "sortable-quick-unique-id"
description = "The Sort-able Quick Unique ID system"
version = "1.1.0"
edition = "2021"
license = "CC0-1.0"
repository = "https://github.com/Novora/SQUID-rs"
authors = ["James Clarke"]
keywords = ["uuid","algorithm", "id", "id-system"]
categories = ["algorithms", "data-structures"]


[dependencies]
machine_uuid = "0.1.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
perf = "warn"
style = "warn"
complexity = "warn"
suspicious = "warn"
correctness = "warn"
cargo = "warn"
